added new style tile

--- a/style-tile/index.html
+++ b/style-tile/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">	
 
-  <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:500,400' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:500,400|Cinzel+Decorative:700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   			
   <link rel="stylesheet" href="css/styles.css">	
 	
@@ -19,32 +21,26 @@
 
 		<section>
 
-			<h1>Project</h1>
-			<em>Version 0</em>
+			<h1>Diana Hawley</h1>
+			<em>Version 1</em>
 			
 			<br><br>
 
-			<h2>Primary Header</h2>
-			<em>Font name, variant, color</em>
+			<h2>This is an example of a Header</h2>
+			<em>Font: Cinzel Decorative #C2C2A3</em>
 			
 			<br><br>
 
-			<h3>Secondary Header</h3>
-			<em>Font name, variant, color</em>
+			<h3>This is an example of a Sub Head</h3>
+			<em>Font: Lora #C2C2A3</em>
 			
 			<br><br>
-
-			<h3>Tertiarty Header (optional)</h3>
-			<em>Font name, variant, color</em>
-
-			<br><br>
 			
-			<h3>Typography</h3>
-			<p>Headings, paragraphs, and text links.</p>
-
-			<h4>A Heading</h4>	
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, maiores, hic, <a href="">Links</a> dolor laboriosam rerum numquam accusantium minima architecto inventore quibusdam <a href="">Links </a>.</p>
-			<em>Font name, varient, color</em>
+			<p>My greatest passion is writing fiction. I also delve into poetry. I write by candle light. It soothes me and helps me relax. I am ambitious, creative, and a bit of a dreamer, so applying discipline is a contest at times. I believe perspective is key and the main tool for digesting reality. I own exotic pets: two Bearded Dragons and one Chinese Water Dragon. Areas of interest include living off the grid, history, and pivotal moments in life. I'm also fascinated by, and drawn to water. I love swimming, the rain, and rafting down the Spokane River. Winter is my favorite season, but I enjoy all seasons--especially as one transitions into the next. I often dream of apocalyptic times; oddly, I quite enjoy them. I'm attracted to intelligence, fresh foods, confidence, and the color white. I dislike arrogance, horrible smells, gusting wind, failing, and paper cuts. One day I hope to have a cabin off the grid where I can go to write a book.</p>
+			<br><br>
+			<a href="">This is a sample Link</a>
+			<br><br>
+			<em>Font: Raleway #00000</em>
 			
 		</section>
 		
@@ -52,7 +48,9 @@
 			<div class="color-1"></div>
 			<div class="color-2"></div>
 			<div class="color-3"></div>
-			<em>Color Palette</em>
+			<div class="color-4"></div>
+			<div class="color-5"></div>
+			<em>Possible Color</em>
 
 			<div class="clear"></div>
 		</section>
@@ -71,7 +69,7 @@
 			<div class="pattern-1"></div>
 			<div class="pattern-2"></div>
 			<div class="pattern-3"></div>
-			<em>Textures/Patterns</em>
+			<em>Textures</em>
 
 			<div class="clear"></div>
 		</section>
