--- a/style-tile/index.html
+++ b/style-tile/index.html
@@ -17,13 +17,12 @@
 <body>
 	
 	<div class="container">
-		
 
 		<section class="p1">
 
 			<em>Style Tile: Version 1</em>
 			<h1>Diana Hawley</h1>
-			
+		
 			<p>My greatest passion is writing fiction. I also delve into poetry. I write by candle light. It soothes me and helps me relax. I am ambitious, creative, and a bit of a dreamer, so applying discipline is a contest at times. I believe perspective is key and the main tool for digesting reality.  I often dream of apocalyptic times; oddly, I quite enjoy them. I'm attracted to intelligence, fresh foods, confidence, and the color white. I dislike arrogance, horrible smells, gusting wind, failing, and paper cuts. One day I hope to have a cabin off the grid where I can go to write a book.</p>
 
 			<section>
@@ -36,43 +35,28 @@
 			<div class="clear"></div>
 			</section> <!--End of Textures -->
 
-		</section> <!--End of First paragraph -->
+		</section> <!--End of First paragraph container -->
 
 		<section class="p2">
+		<h2>More About Me</h2>
+		<br><br>
 		<p>I own exotic pets: two Bearded Dragons and one Chinese Water Dragon. Areas of interest include living off the grid, history, and pivotal moments in life. I'm also fascinated by, and drawn to water. I love swimming, the rain, and rafting down the Spokane River. Winter is my favorite season, but I enjoy all seasons--especially as one transitions into the next.</p>
 		
-		<section>
-			<div class="color-1"></div>
-			<div class="color-2"></div>
-			<div class="color-3"></div>
-			<div class="color-4"></div>
-			<div class="color-5"></div>
-			<em>Possible Color</em>
+			<section>
+				<h3>Color Options</h3>
+				<div class="color-1"></div>
+				<div class="color-2"></div>
+				<div class="color-3"></div>
+				<div class="color-4"></div>
+				<div class="color-5"></div>
 
-			<div class="clear"></div>
-		</section>
+				<div class="clear"></div>
+			</section>
 		<a href="">This is a Link</a>
 		<br><br>
 		<a href="">This is a visited Link</a>
 		<br><br>
-		<em>Font: Raleway #00000</em>
-		</section>
-		
-		
-
-		<section>
-			<div class="imagery-1"></div>
-			<div class="imagery-2"></div>
-			<div class="imagery-3"></div>
-			<em>Imagagery</em>
-
-			<div class="clear"></div>
-		</section>
-
-		
-		<section>
-			
-		</section>
+		</section> <!--End of Second paragraph container -->
 
 		<!-- Clearfix -->
 		<div class="clear"></div>
