--- a/style-tile/index.html
+++ b/style-tile/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	
-	<div class="container">
+	<div class="container showgrid">
 
 		<section class="p1">
 
@@ -45,7 +45,6 @@
 			<section>
 				<h3>Color Options</h3>
 				<div class="color-1"></div>
-				<div class="color-2"></div>
 				<div class="color-3"></div>
 				<div class="color-4"></div>
 				<div class="color-5"></div>
