--- a/profile.html
+++ b/profile.html
@@ -16,15 +16,15 @@
 
 <body class="profile">
   
-  <h1>378 Website Starter</h1>
+  <h1>User Account</h1>
 <div class="ui card">
   <div class="image">
-    <img src="/images/avatar/large/stevie.jpg">
+    <img src="img/profile.jpg">
   </div>
   <div class="content">
-    <a class="header">Stevie Feliciano</a>
+    <a class="header">Diana Hawley</a>
     <div class="meta">
-      <span class="date">Joined in 2014</span>
+      <span class="date">Enrolled in 2014</span>
     </div>
     <div class="description">
       Stevie Feliciano is a library scientist living in New York City. She likes to spend her time reading, running, and writing.
@@ -37,7 +37,6 @@
     </a>
   </div>
 </div>
-  
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/semantic.js"></script>
