--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
   <h1>User Account</h1>
 <div class="ui card">
   <div class="image">
-    <img src="img/profile.jpg">
+    <img src="/img/profile.jpg">
   </div>
   <div class="content">
     <a class="header">Diana Hawley</a>
