--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
 
 <body class="profile">
   
-  <h1>User Account</h1>
+  <h1>Profile</h1>
 <div class="ui card">
   <div class="image">
     <img src="/img/profile.jpg">
