--- a/style-tile/index.html
+++ b/style-tile/index.html
@@ -9,7 +9,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Raleway:500,400' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Raleway:500,400|Cinzel+Decorative:700' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Actor|Telex|Rosario:700' rel='stylesheet' type='text/css'>
   			
   <link rel="stylesheet" href="css/styles.css">	
 	
@@ -21,12 +21,12 @@
 		<section class="p1">
 
 			<em>Style Tile: Version 1</em>
-			<h1>Diana Hawley</h1>
+			<h1>DIANA HAWLEY</h1>
 		
 			<p>My greatest passion is writing fiction. I also delve into poetry. I write by candle light. It soothes me and helps me relax. I am ambitious, creative, and a bit of a dreamer, so applying discipline is a contest at times. I believe perspective is key and the main tool for digesting reality.  I often dream of apocalyptic times; oddly, I quite enjoy them. I'm attracted to intelligence, fresh foods, confidence, and the color white. I dislike arrogance, horrible smells, gusting wind, failing, and paper cuts. One day I hope to have a cabin off the grid where I can go to write a book.</p>
 
 			<section>
-			<h3>Textures</h3>
+			<h3 class="texturebox">TEXTURES</h3>
 			<div class="pattern-1"></div>
 			<div class="pattern-2"></div>
 			<div class="pattern-3"></div>
@@ -38,23 +38,22 @@
 		</section> <!--End of First paragraph container -->
 
 		<section class="p2">
-		<h2>More About Me</h2>
+		<h2>INFO</h2>
 
 		<p>I own exotic pets: two Bearded Dragons and one Chinese Water Dragon. Areas of interest include living off the grid, history, and pivotal moments in life. I'm also fascinated by, and drawn to water. I love swimming, the rain, and rafting down the Spokane River. Winter is my favorite season, but I enjoy all seasons--especially as one transitions into the next.</p>
-		
+		<a href="" active>THIS IS A LINK</a>
+		<br><br>
+		<a href="">ThIS IS A VISITED LINK</a>
+		<br><br>
 			<section>
-				<h3>Color Options</h3>
+				<h3 class="pick">COLOR OPTIONS</h3>
 				<div class="color-1"></div>
 				<div class="color-3"></div>
+				<div class="clear"></div>
 				<div class="color-4"></div>
 				<div class="color-5"></div>
-
 				<div class="clear"></div>
 			</section>
-		<a href="">This is a Link</a>
-		<br><br>
-		<a href="">This is a visited Link</a>
-		<br><br>
 		</section> <!--End of Second paragraph container -->
 
 		<!-- Clearfix -->
