--- a/calendar.html
+++ b/calendar.html
@@ -16,10 +16,10 @@
 
 <body>
   
+  <div class="column"><i class="calendar icon"></i>Calendar</div>
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/semantic.js"></script>
   <script src="js/scripts.js"></script>
-  <script type="text/javascript" src="http://100widgets.com/js_data.php?id=91"></script>
 
 </body>
 </html>
