added dash items

--- a/class-registration.html
+++ b/class-registration.html
@@ -16,60 +16,36 @@
 
 <body>
   
-  <table class="ui compact celled definition table">
+  <table class="ui table">
   <thead>
     <tr>
-      <th></th>
-      <th>Class</th>
-      <th>Professor</th>
-      <th>Books</th>
-      <th>Open</th>
+      <th>Name</th>
+      <th>Registration Date</th>
+      <th>E-mail address</th>
+      <th>Premium Plan</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td class="collapsing">
-      </td>
       <td>John Lilki</td>
       <td>September 14, 2013</td>
       <td>jhlilk22@yahoo.com</td>
       <td>No</td>
     </tr>
     <tr>
-      <td class="collapsing">
-      </td>
       <td>Jamie Harington</td>
       <td>January 11, 2014</td>
       <td>jamieharingonton@yahoo.com</td>
       <td>Yes</td>
     </tr>
     <tr>
-      <td class="collapsing">
-      </td>
       <td>Jill Lewis</td>
       <td>May 11, 2014</td>
       <td>jilsewris22@yahoo.com</td>
       <td>Yes</td>
     </tr>
   </tbody>
-  <tfoot class="full-width">
-    <tr>
-      <th></th>
-      <th colspan="4">
-        <div class="ui right floated small primary labeled icon button">
-          <i class="user icon"></i> Add User
-        </div>
-        <div class="ui small button">
-          Approve
-        </div>
-        <div class="ui small  disabled button">
-          Approve All
-        </div>
-      </th>
-    </tr>
-  </tfoot>
 </table>
-
   
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
