--- a/original - Copy (3).html
+++ b/original - Copy (3).html
@@ -16,17 +16,8 @@
 
 <body>
   
-<div class="ui inverted menu">
-  <a class="active item">
-    <i class="home icon"></i> Home
-  </a>
-  <a class="item">
-    <i class="mail icon"></i> Messages
-  </a>
-  <a class="item">
-    <i class="user icon"></i> Friends
-  </a>
-</div>
+  <h1>378 Website Starter</h1>
+
   
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
