--- a/search.html
+++ b/search.html
@@ -16,17 +16,14 @@
 
 <body>
   
-<div class="ui inverted menu">
-  <a class="active item">
-    <i class="home icon"></i> Home
-  </a>
-  <a class="item">
-    <i class="mail icon"></i> Messages
-  </a>
-  <a class="item">
-    <i class="user icon"></i> Friends
-  </a>
+  <div class="ui search">
+  <div class="ui icon input">
+    <input class="prompt" type="text" placeholder="Common passwords...">
+    <i class="search icon"></i>
+  </div>
+  <div class="results"></div>
 </div>
+
   
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
