finished class registration

--- a/class-signup.html
+++ b/class-signup.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-  
-  <h1>378 Website Starter</h1>
-
+ <div class="ui menu">
+    <a class="item">Sign Up</a>
+</div>
   
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
