--- a/origin.html
+++ b/origin.html
@@ -15,11 +15,21 @@
 </head>
 
 <body>
-  
-  <div class="ui toggle checkbox">
-  <input type="checkbox" name="public">
-  <label>Subscribe to weekly newsletter</label>
-</div>
+  <table>
+  <th colspan="4">
+        <div class="ui right floated small primary labeled icon button">
+          <i class="user icon"></i> Add User
+        </div>
+        <div class="ui small  button">
+          Approve
+        </div>
+        <div class="ui small  disabled button">
+          Approve All
+        </div>
+      </th>
+    </tr>
+  </tfoot>
+</table>
   
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
