--- a/submit-classes.html
+++ b/submit-classes.html
@@ -15,10 +15,13 @@
 </head>
 
 <body>
- <div class="ui menu">
-    <a class="item">Sign Up</a>
+<div class="ui action input">
+  <input type="text" value="http://ww.short.url/c0opq">
+  <div class="ui teal right labeled icon button">
+    <i class="copy icon"></i>
+    Copy
+  </div>
 </div>
-  
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/semantic.js"></script>
