final submit for classses

--- a/original - Copy (3).html
+++ b/original - Copy (3).html
@@ -16,9 +16,10 @@
 
 <body>
 <div class="ui action input">
-  <input type="text">
+  <input type="text" value="http://ww.short.url/c0opq">
   <div class="ui teal right labeled icon button">
-    Register
+    <i class="copy icon"></i>
+    Copy
   </div>
 </div>
   
