submit classes done

--- a/submit-classes.html
+++ b/submit-classes.html
@@ -15,12 +15,14 @@
 </head>
 
 <body>
-<div class="ui action input">
-  <input type="text">
-  <div class="ui teal right labeled icon button">
-    Register
+  
+  <div class="ui menu">
+  <div class="item">
+    <div class="ui primary button">Sign up</div>
   </div>
 </div>
+
+  
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/semantic.js"></script>
