updated widget dummy info

--- a/class-registration.html
+++ b/class-registration.html
@@ -19,29 +19,29 @@
   <table class="ui table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Registration Date</th>
-      <th>E-mail address</th>
-      <th>Premium Plan</th>
+      <th>Class Name</th>
+      <th>Instructor</th>
+      <th>Required Text</th>
+      <th>Open</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>John Lilki</td>
-      <td>September 14, 2013</td>
-      <td>jhlilk22@yahoo.com</td>
+      <td>DRAWING FOR COMMUNICATION</td>
+      <td>Brittany Genevieve </td>
+      <td>No Required Text</td>
       <td>No</td>
     </tr>
     <tr>
-      <td>Jamie Harington</td>
-      <td>January 11, 2014</td>
-      <td>jamieharingonton@yahoo.com</td>
+      <td>DIGITAL FOUNDATIONS</td>
+      <td>Donald Jorgensen</td>
+      <td>Foundation Of Digital Art & Design</td>
       <td>Yes</td>
     </tr>
     <tr>
-      <td>Jill Lewis</td>
-      <td>May 11, 2014</td>
-      <td>jilsewris22@yahoo.com</td>
+      <td>TYPOGRAPHY</td>
+      <td>Ginelle Hustrulid </td>
+      <td>Elements Of Typographic Style,Vers.4.0</td>
       <td>Yes</td>
     </tr>
   </tbody>
