--- a/menu.html
+++ b/menu.html
@@ -18,13 +18,16 @@
   
 <div class="ui inverted menu">
   <a class="active item">
-    <i class="home icon"></i> Home
+    <i class="university icon"></i> Courses
   </a>
   <a class="item">
-    <i class="mail icon"></i> Messages
+    <i class="mail icon"></i> Email
   </a>
   <a class="item">
-    <i class="user icon"></i> Friends
+    <i class="calendar icon"></i> Calander
+  </a>
+  <a class="item">
+    <i class="book icon"></i> Books
   </a>
 </div>
   
