--- a/profile.html
+++ b/profile.html
@@ -16,25 +16,23 @@
 
 <body class="profile">
   
-  <h1>Profile</h1>
 <div class="ui card">
   <div class="image">
-    <img src="/img/profile.jpg">
+    <img src="img/profile.jpg">
   </div>
   <div class="content">
     <a class="header">Diana Hawley</a>
     <div class="meta">
-      <span class="date">Enrolled in 2014</span>
     </div>
     <div class="description">
-      Stevie Feliciano is a library scientist living in New York City. She likes to spend her time reading, running, and writing.
+      I own exotic pets: two Bearded Dragons and one Chinese Water Dragon. Areas of interest include living off the grid, history, and pivotal moments in life. I'm also fascinated by, and drawn to water. I love swimming, the rain, and rafting down the Spokane River. Winter is my favorite season, but I enjoy all seasons--especially as one transitions into the next.
     </div>
   </div>
   <div class="extra content">
-    <a>
+    <!--<a>
       <i class="user icon"></i>
       22 Friends
-    </a>
+    </a>-->
   </div>
 </div>
   
