--- a/search.html
+++ b/search.html
@@ -18,7 +18,7 @@
   
   <div class="ui search">
   <div class="ui icon input">
-    <input class="prompt" type="text" placeholder="Common passwords...">
+    <input class="prompt" type="text" placeholder="Class Search">
     <i class="search icon"></i>
   </div>
   <div class="results"></div>
