--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
     <i class="mail icon"></i> Email
   </a>
   <a class="item">
-    <i class="calendar icon"></i> Calander
+    <i class="calendar icon"></i> Calender
   </a>
   <a class="item">
     <i class="book icon"></i> Books
