--- a/menu.html
+++ b/menu.html
@@ -18,16 +18,13 @@
   
 <div class="ui inverted menu">
   <a class="active item">
-    <i class="university icon"></i> Courses
+    <i class="university icon"></i> Canvas
   </a>
   <a class="item">
     <i class="mail icon"></i> Email
   </a>
   <a class="item">
     <i class="calendar icon"></i> Calender
-  </a>
-  <a class="item">
-    <i class="book icon"></i> Books
   </a>
 </div>
   
