--- a/class-list.html
+++ b/class-list.html
@@ -8,9 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <title>DESN 378 Website Starter</title>
-
+  <link href='http://fonts.googleapis.com/css?family=Raleway:500,400' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:500,400|Cinzel+Decorative:700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Actor|Telex|Rosario:700' rel='stylesheet' type='text/css'>
+  
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+
 
 </head>
 
