--- a/style-tile/index.html
+++ b/style-tile/index.html
@@ -41,9 +41,9 @@
 		<h2>INTERESTS</h2>
 
 		<p>I own exotic pets: two Bearded Dragons and one Chinese Water Dragon. Areas of interest include living off the grid, history, and pivotal moments in life. I'm also fascinated by, and drawn to water. I love swimming, the rain, and rafting down the Spokane River. Winter is my favorite season, but I enjoy all seasons--especially as one transitions into the next.</p>
-		<a href="" active>THIS IS A LINK</a>
+		<a href="">THIS IS A LINK</a>
 		<br><br>
-		<a href="">ThIS IS A VISITED LINK</a>
+		<a href="">THIS IS A VISITED LINK</a>
 		<br><br>
 			<section>
 				<h3 class="pick">COLOR OPTIONS</h3>
